--- a/src/components/common/Tabs/Tab/Tab.module.css
+++ b/src/components/common/Tabs/Tab/Tab.module.css
@@ -7,7 +7,7 @@ table {
   width: 100%;
   border: 1px solid gray;
   padding-left: 10px;
-  border-collapse: collapse
+  border-collapse: collapse;
 }
 
 thead {
@@ -17,4 +17,21 @@ thead {
 td {
   padding: 10px;
   padding-left: 15px;
+}
+
+.action_button {
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+}
+
+.action_button div {
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  display: inline-block;
+}
+
+.action_button div img {
+  height: 100%;
 }
