--- a/src/components/Tabs/Tab/Tab.module.css
+++ b/src/components/Tabs/Tab/Tab.module.css
@@ -21,15 +21,19 @@ td {
 
 .action_button {
   cursor: pointer;
-  height: 20px;
-  width: 20px;
+  height: 18px;
+  width: 18px;
 }
 
 .action_button div {
   cursor: pointer;
-  height: 20px;
-  width: 20px;
+  height: 18px;
+  width: 18px;
   display: inline-block;
+  padding-bottom: 2px;
+}
+.action_button div:hover {
+  border-bottom: 1px solid gray;
 }
 
 .action_button div img {
