--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
+@font-face {
+  font-family: "FiraSansMedium";
+  src: url("../src/assets/fonts/FiraSans-Medium.ttf");
+}
+
+@font-face {
+  font-family: "FiraSansBold";
+  src: url("../src/assets/fonts/FiraSans-Bold.ttf");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "FiraSansMedium";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   font-size: 15px;
   color: #1a1a1a;
-  /* background-color: #f5f5f5; */
 }
 
 code {
